[refactor] Added my subscription section to index2

--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -293,16 +293,20 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" name="password" placeholder="Password">
                     </div>
-
-                    <!--div class="checkbox">
-                        <label>
-                          <input type="checkbox"> You are agreeing to the <a href="#">Terms of Service</a> and <a href="#">the&nbsp;Privacy Policy</a>.
-                        </label>
-                    </div-->
                     <input type="submit" value="Create Account" class="btn btn-default"/>
                 </form>
             </div>
     </section>
+
+    <!-- Upgrade Account -->
+   <!--  <section id="accountUpgrade" class="account">
+        <div class="col-xs-offset-2 col-xs-6">
+
+            MY SUBSCRIPTION GOES HERE
+
+              
+        </div>
+    </section> -->
 
     <!-- Footer -->
 
