--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -227,6 +227,8 @@
 
     <!-- Login -->
     <section id="login2" class="login">
+        <div class="title col-xs-12"><h1>Prezera</h1></div>
+
         <div class="col-xs-offset-4 col-xs-4">
 
                 <form class="m-form-signin" role="form" action="/signin.html" method="post">
@@ -249,6 +251,7 @@
 
     <!-- Sign Up -->
     <section id="signUp" class="signUp">
+        <div class="title col-xs-12"><h1>Prezera</h1></div>
         <div class="col-xs-offset-4 col-xs-4">
 
                <div class="container-fluid">
