CSS styling for new front page

--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -103,12 +103,18 @@
     <!-- Header -->
     <header id="top" class="header allData">
 
-        <div class="title col-xs-12"><h1>Prezera</h1></div>
+        <div class="title col-xs-12" style="position: absolute; top: 20%;">
+			<center>
+				<div style="font-size: 150px; color: #000061">
+					PRE<span style='color:red'>Z</span>ERA
+				</div>
+			</center>
+		</div>
 
 
-        <video autoplay loop id="bgvid" muted="muted">
+        <!--<video autoplay loop id="bgvid" muted="muted">
             <source src="new_template/img/vid2.mp4" type="video/webm" >
-        </video>
+        </video>-->
 
 
         <div class="text-vertical-center">
