--- a/AWS_Website/www_static/A1/webrtc/record.html
+++ b/AWS_Website/www_static/A1/webrtc/record.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script src="/A1/js/RTCMultiConnection.js"></script>
+<script src="/A1/js/RecordRTC.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <style>
@@ -74,8 +75,8 @@ $( document ).ready(function() {
 				h2 = document.createElement('p');
 				h2.innerHTML = '<a href="' + URL.createObjectURL(blob.video) + '" target="_blank">Open recorded ' + blob.video.type + '</a>';
 				$( "#video_result" ).append(h2);
+				console.log(blob);
 			}
-			moderator.streams.stop('screen');
 		});
 		
 		moderator.streams[audioStream.streamid].stopRecording(function(blob) {
@@ -85,9 +86,11 @@ $( document ).ready(function() {
 				h2.innerHTML = '<a href="' + URL.createObjectURL(blob.audio) + '" target="_blank">Open recorded ' + blob.audio.type + '</a>';
 				$( "#audio_result" ).append(h2);
 			}
-			moderator.streams.stop('audio');
 		});
 		
+		moderator.streams.stop();	
+		stopSession();
+
 		$("#stopRecording").prop('disabled', true);
 		$("#startRecording").prop('disabled', false);
 	});
