--- a/AWS_Website/www_static/A1/webrtc/record.html
+++ b/AWS_Website/www_static/A1/webrtc/record.html
@@ -130,7 +130,18 @@ $( document ).ready(function() {
 			$("#startRecording").prop('disabled', false);
 		}
 		else {
-			alert('You should use Chrome browser');
+			if(navigator.userAgent.indexOf("Firefox") != -1 )  {
+				moderator.onMediaError = function(error) {
+					if(error.name == 'PermissionDeniedError') {
+						$("#install_firefox_extension").show();
+					}
+				};
+
+				$("#startRecording").prop('disabled', false);
+			}
+			else {
+				alert('We only support the latest versions of Google Chrome and FF');
+			}
 		}
 	});
 	
@@ -175,11 +186,11 @@ function stopBlinking() {
 
 <ul>
 	<li id="install_chrome_extension" style="display: none">
-		<a href="https://chrome.google.com/webstore/detail/screen-capturing/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">Click <b>here</b> to install Chrome Presenter Extension</a>
+		<a href="https://chrome.google.com/webstore/detail/screen-capturing/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">Click <b>here</b> to install Chrome Presenter Extension (audience don't need it)</a>
 	</li>
 
 	<li id="install_firefox_extension" style="display: none">
-		<a href="https://www.webrtc-experiment.com/store/firefox-extension/enable-screen-capturing.xpi">Click here to install Firefox Presenter Extension (audience don't need it)</a>
+		<a href="https://addons.mozilla.org/en-US/firefox/addon/enable-screen-capturing/" target="_blank">Click here to install Firefox Presenter Extension (audience don't need it)</a>
 	</li>
 </ul>
 
