--- a/AWS_Website/www_static/A1/webrtc/sharing-client.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-client.html
@@ -23,6 +23,7 @@ socketWebrtc.on('sharing-client', function (data) {
 		var MODERATOR_SESSION_ID = '<%= hash %>-screen';    // room-id
 		var MODERATOR_ID         = '' + moderatorId + '';    // user-id
 		var MODERATOR_SESSION    = {         // media-type
+			oneway: true
 		};
 
 		var MODERATOR_EXTRA      = {};       // empty extra-data
