--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -51,6 +51,10 @@
 
 <body> <!--onresize="resizeCanvas()">-->
 
+<div id="recStarted" style="position: absolute;  top: -10px; left: -10px; display: none; z-index: 2;">
+<img id="recordButton" src="/img/matrox-record-icon.jpg" width="50" height="60">
+</div>
+
 	<!--<img src="../img/RightCurtain.png" id="rightCurtain" class="curtain" />
 	<img src="../img/RightCurtain.png" id="leftCurtain" class="curtain leftCurtain" />-->
  <!-- Google Tag Manager -->
@@ -233,7 +237,7 @@
 				  <li><a href="javascript:showHideRemote()" id="menuShowHideRemote"><span id='remoteOpenCloseLabel'></span>Remote Control (live)</a></li>
 				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span>Chat<span id='chatUsersLabel'></span></a></li>
 				  <li><a href="javascript:showHideVideoChat()" id="menuOpenVideoChat"><span id='videoChatOpenCloseLabel'></span>Live Video</a></li>
-				  <li><a href="javascript:recording()" id="menuOpenRecording"><span id='RecordingOpenCloseLabel'>Start</span> Recording</a></li>
+				  <li><a href="javascript:recording()" id="menuOpenRecording"><span id='RecordingOpenCloseLabel'>Start</span> Recording (beta)</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
 				  <li><a href="javascript:showHideScreensharing()" id="menuOpenScreensharing"><span id='screensharingOpenCloseLabel'></span>Screen Share</a></li>
           <li class="social"><a href="#">Share</a>
