--- a/AWS_Website/www_static/A1/webrtc/video-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/video-presenter.html
@@ -44,6 +44,13 @@ moderator.onstream = function(event) {
 	if(event.isVideo) {
 		if(event.type == "local") {
 			$( "#videosharing" ).append(event.mediaElement);
+			$("#" + event.streamid).hide();
+			if(navigator.userAgent.indexOf("Firefox") != -1 )  {
+				setTimeout(function(){
+					event.mediaElement.play();
+					$("#" + event.streamid).show();
+				}, 1000);
+			}
 			videoPresenterSocket.emit("presenterVideoChat", {open: 1, hash: '<%= hash %>'});
 		}
 		else if(event.type == "remote") {
