Added video save function

--- a/AWS_Website/www_static/A1/webrtc/record.html
+++ b/AWS_Website/www_static/A1/webrtc/record.html
@@ -88,7 +88,7 @@ $( document ).ready(function() {
 				h2 = document.createElement('p');
 				h2.innerHTML = '<a href="' + URL.createObjectURL(blob.video) + '" target="_blank">Open recorded ' + blob.video.type + '</a>';
 				$( "#video_result" ).append(h2);
-				console.log(blob);
+				moderator.saveToDisk(blob.video, parent.document.title + '.webm');
 			});
 
 			moderator.streams.stop();
