Recording only for FF

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -222,7 +222,7 @@
 		<span class="closeLiveVideo"><div class="closevideo" id="closerecording"></div></span>
 		<iframe width="100%" height="100%"  id="recordingframe" scrolling="no"></iframe>
 	</div>
-	
+
 	<div class="startTemporaryPopup" id="videoChatExplanator">&#8592; click grey bar to open Video Chat</div>
 	<div class="startTemporaryPopup" id="wallChatExplanator">click grey bar to open Wall/Chat &#8594;</div>
 	<div class="startTemporaryPopup" id="urlExplanator">share this is unique address of your presentation &#8593;</div>
@@ -237,7 +237,7 @@
 				  <li><a href="javascript:showHideRemote()" id="menuShowHideRemote"><span id='remoteOpenCloseLabel'></span>Remote Control (live)</a></li>
 				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span>Chat<span id='chatUsersLabel'></span></a></li>
 				  <li><a href="javascript:showHideVideoChat()" id="menuOpenVideoChat"><span id='videoChatOpenCloseLabel'></span>Live Video</a></li>
-				  <li><a href="javascript:recording()" id="menuOpenRecording"><span id='RecordingOpenCloseLabel'>Start</span> Recording (beta)</a></li>
+				  <li><a href="javascript:recording()" id="menuOpenRecording" style="display: none"><span id='RecordingOpenCloseLabel'>Start</span> Recording (beta)</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
 				  <li><a href="javascript:showHideScreensharing()" id="menuOpenScreensharing"><span id='screensharingOpenCloseLabel'></span>Screen Share</a></li>
           <li class="social"><a href="#">Share</a>
